appId: com.datetimechecker.date_time_checker
---
- launchApp:
    clearState: true

- assertVisible: "Date Time Checker"
- assertVisible: "Waiting for validation"

- tapOn:
    id: "day_input"
- inputText: "29"
- tapOn:
    id: "month_input"
- inputText: "2"
- tapOn:
    id: "year_input"
- inputText: "2024"
- hideKeyboard
- tapOn:
    id: "check_now_button"

- assertVisible: "Valid date"
- assertVisible: "29/02/2024 is a valid date."
